// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KibanaPageTemplateSolutionNav accepts EuiSideNavProps 1`] = `
<Fragment>
  <EuiCollapsibleNavGroup
    background="none"
    className="kbnPageTemplateSolutionNav"
    initialIsOpen={false}
    isCollapsible={true}
    paddingSize="none"
    title={
      <EuiTitle
        id="KibanaPageTemplateSolutionNav_generated-id_heading"
        size="xs"
      >
        <h2>
          <strong>
            <FormattedMessage
              defaultMessage="{solutionName} {menuText}"
              id="sharedUXComponents.solutionNav.mobileTitleText"
              values={
                Object {
                  "menuText": "menu",
                  "solutionName": "Solution",
                }
              }
            />
          </strong>
        </h2>
      </EuiTitle>
    }
    titleElement="span"
  >
    <EuiPanel
      color="transparent"
      paddingSize="s"
    >
      <EuiSideNav
        aria-hidden={false}
        aria-labelledby="KibanaPageTemplateSolutionNav_generated-id_heading"
        data-test-subj="DTS"
        items={
          Array [
            Object {
              "id": "1",
              "items": Array [
                Object {
                  "id": "1.1",
                  "items": undefined,
                  "name": "Ingest Node Pipelines",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "1.2",
                  "items": undefined,
                  "name": "Logstash Pipelines",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "1.3",
                  "items": undefined,
                  "name": "Beats Central Management",
                  "tabIndex": undefined,
                },
              ],
              "name": "Ingest",
              "tabIndex": undefined,
            },
            Object {
              "id": "2",
              "items": Array [
                Object {
                  "id": "2.1",
                  "items": undefined,
                  "name": "Index Management",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "2.2",
                  "items": undefined,
                  "name": "Index Lifecycle Policies",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "2.3",
                  "items": undefined,
                  "name": "Snapshot and Restore",
                  "tabIndex": undefined,
                },
              ],
              "name": "Data",
              "tabIndex": undefined,
            },
          ]
        }
        mobileBreakpoints={Array []}
      />
    </EuiPanel>
  </EuiCollapsibleNavGroup>
</Fragment>
`;

exports[`KibanaPageTemplateSolutionNav accepts canBeCollapsed prop 1`] = `
<Fragment>
  <EuiCollapsibleNavGroup
    background="none"
    className="kbnPageTemplateSolutionNav"
    initialIsOpen={false}
    isCollapsible={true}
    paddingSize="none"
    title={
      <EuiTitle
        id="KibanaPageTemplateSolutionNav_generated-id_heading"
        size="xs"
      >
        <h2>
          <strong>
            <FormattedMessage
              defaultMessage="{solutionName} {menuText}"
              id="sharedUXComponents.solutionNav.mobileTitleText"
              values={
                Object {
                  "menuText": "menu",
                  "solutionName": "Solution",
                }
              }
            />
          </strong>
        </h2>
      </EuiTitle>
    }
    titleElement="span"
  >
    <EuiPanel
      color="transparent"
      paddingSize="s"
    >
      <EuiSideNav
        aria-hidden={false}
        aria-labelledby="KibanaPageTemplateSolutionNav_generated-id_heading"
        items={
          Array [
            Object {
              "id": "1",
              "items": Array [
                Object {
                  "id": "1.1",
                  "items": undefined,
                  "name": "Ingest Node Pipelines",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "1.2",
                  "items": undefined,
                  "name": "Logstash Pipelines",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "1.3",
                  "items": undefined,
                  "name": "Beats Central Management",
                  "tabIndex": undefined,
                },
              ],
              "name": "Ingest",
              "tabIndex": undefined,
            },
            Object {
              "id": "2",
              "items": Array [
                Object {
                  "id": "2.1",
                  "items": undefined,
                  "name": "Index Management",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "2.2",
                  "items": undefined,
                  "name": "Index Lifecycle Policies",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "2.3",
                  "items": undefined,
                  "name": "Snapshot and Restore",
                  "tabIndex": undefined,
                },
              ],
              "name": "Data",
              "tabIndex": undefined,
            },
          ]
        }
        mobileBreakpoints={Array []}
      />
    </EuiPanel>
  </EuiCollapsibleNavGroup>
</Fragment>
`;

exports[`KibanaPageTemplateSolutionNav heading accepts more headingProps 1`] = `
<Fragment>
  <EuiCollapsibleNavGroup
    background="none"
    className="kbnPageTemplateSolutionNav"
    initialIsOpen={false}
    isCollapsible={true}
    paddingSize="none"
    title={
      <EuiTitle
        id="testID"
        size="xs"
      >
        <h3>
          <strong>
            <FormattedMessage
              defaultMessage="{solutionName} {menuText}"
              id="sharedUXComponents.solutionNav.mobileTitleText"
              values={
                Object {
                  "menuText": "menu",
                  "solutionName": "Solution",
                }
              }
            />
          </strong>
        </h3>
      </EuiTitle>
    }
    titleElement="span"
  >
    <EuiPanel
      color="transparent"
      paddingSize="s"
    />
  </EuiCollapsibleNavGroup>
</Fragment>
`;

exports[`KibanaPageTemplateSolutionNav renders 1`] = `
<Fragment>
  <EuiCollapsibleNavGroup
    background="none"
    className="kbnPageTemplateSolutionNav"
    initialIsOpen={false}
    isCollapsible={true}
    paddingSize="none"
    title={
      <EuiTitle
        id="KibanaPageTemplateSolutionNav_generated-id_heading"
        size="xs"
      >
        <h2>
          <strong>
            <FormattedMessage
              defaultMessage="{solutionName} {menuText}"
              id="sharedUXComponents.solutionNav.mobileTitleText"
              values={
                Object {
                  "menuText": "menu",
                  "solutionName": "Solution",
                }
              }
            />
          </strong>
        </h2>
      </EuiTitle>
    }
    titleElement="span"
  >
    <EuiPanel
      color="transparent"
      paddingSize="s"
    >
      <EuiSideNav
        aria-hidden={false}
        aria-labelledby="KibanaPageTemplateSolutionNav_generated-id_heading"
        items={
          Array [
            Object {
              "id": "1",
              "items": Array [
                Object {
                  "id": "1.1",
                  "items": undefined,
                  "name": "Ingest Node Pipelines",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "1.2",
                  "items": undefined,
                  "name": "Logstash Pipelines",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "1.3",
                  "items": undefined,
                  "name": "Beats Central Management",
                  "tabIndex": undefined,
                },
              ],
              "name": "Ingest",
              "tabIndex": undefined,
            },
            Object {
              "id": "2",
              "items": Array [
                Object {
                  "id": "2.1",
                  "items": undefined,
                  "name": "Index Management",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "2.2",
                  "items": undefined,
                  "name": "Index Lifecycle Policies",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "2.3",
                  "items": undefined,
                  "name": "Snapshot and Restore",
                  "tabIndex": undefined,
                },
              ],
              "name": "Data",
              "tabIndex": undefined,
            },
          ]
        }
        mobileBreakpoints={Array []}
      />
    </EuiPanel>
  </EuiCollapsibleNavGroup>
</Fragment>
`;

exports[`KibanaPageTemplateSolutionNav renders with icon 1`] = `
<Fragment>
  <EuiCollapsibleNavGroup
    background="none"
    className="kbnPageTemplateSolutionNav"
    initialIsOpen={false}
    isCollapsible={true}
    paddingSize="none"
    title={
      <EuiTitle
        id="KibanaPageTemplateSolutionNav_generated-id_heading"
        size="xs"
      >
        <h2>
          <KibanaSolutionAvatar
            className="kbnPageTemplateSolutionNav__avatar"
            iconType="logoElastic"
            name="Solution"
          />
          <strong>
            <FormattedMessage
              defaultMessage="{solutionName} {menuText}"
              id="sharedUXComponents.solutionNav.mobileTitleText"
              values={
                Object {
                  "menuText": "menu",
                  "solutionName": "Solution",
                }
              }
            />
          </strong>
        </h2>
      </EuiTitle>
    }
    titleElement="span"
  >
    <EuiPanel
      color="transparent"
      paddingSize="s"
    >
      <EuiSideNav
        aria-hidden={false}
        aria-labelledby="KibanaPageTemplateSolutionNav_generated-id_heading"
        items={
          Array [
            Object {
              "id": "1",
              "items": Array [
                Object {
                  "id": "1.1",
                  "items": undefined,
                  "name": "Ingest Node Pipelines",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "1.2",
                  "items": undefined,
                  "name": "Logstash Pipelines",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "1.3",
                  "items": undefined,
                  "name": "Beats Central Management",
                  "tabIndex": undefined,
                },
              ],
              "name": "Ingest",
              "tabIndex": undefined,
            },
            Object {
              "id": "2",
              "items": Array [
                Object {
                  "id": "2.1",
                  "items": undefined,
                  "name": "Index Management",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "2.2",
                  "items": undefined,
                  "name": "Index Lifecycle Policies",
                  "tabIndex": undefined,
                },
                Object {
                  "id": "2.3",
                  "items": undefined,
                  "name": "Snapshot and Restore",
                  "tabIndex": undefined,
                },
              ],
              "name": "Data",
              "tabIndex": undefined,
            },
          ]
        }
        mobileBreakpoints={Array []}
      />
    </EuiPanel>
  </EuiCollapsibleNavGroup>
</Fragment>
`;
